# ciso-assistant-api

./: .bumpversion.cfg  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  a2a.json  connector_manifest.yml  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini
ciso_assistant_api/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  bundled_mcp.json  ciso_assistant_models.py  kg_ingest.py  kg_media.py  main_agent.json  mcp_server.py
ciso_assistant_api/agent/: IDENTITY.md
ciso_assistant_api/api/: __init__.py  _operation_manifest.py  api_client_analytics_metrology.py  api_client_assets.py  api_client_auth_users.py  api_client_base.py  api_client_chat.py  api_client_compliance.py  api_client_crq.py  api_client_ebios_rm.py  api_client_evidence.py  api_client_frameworks_libraries.py  api_client_governance.py  api_client_incidents.py  api_client_integrations.py  api_client_privacy.py  api_client_resilience.py  api_client_risk_management.py  api_client_security_findings.py  api_client_settings.py  api_client_tasks_timeline.py  api_client_third_party.py
ciso_assistant_api/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
ciso_assistant_api/mcp/: __init__.py  mcp_analytics_metrology.py  mcp_assets.py  mcp_auth_users.py  mcp_chat.py  mcp_compliance.py  mcp_crq.py  mcp_custom_api.py  mcp_ebios_rm.py  mcp_evidence.py  mcp_frameworks_libraries.py  mcp_governance.py  mcp_incidents.py  mcp_integrations.py  mcp_kg_ingest.py  mcp_privacy.py  mcp_resilience.py  mcp_risk_management.py  (+4 more)
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  overview.md  usage.md
scripts/: generate_from_openapi.py
tests/: conftest.py  test_auth.py  test_ciso_assistant_brute_force_coverage.py  test_ciso_assistant_coverage.py  test_kg_ingest.py  test_kg_media.py  test_mcp_server.py  test_startup.py
(+14 files in other folders)
